View Issue Details

IDProjectCategoryView StatusLast Update
0033410CommunityOCCT:Data Exchangepublic2023-08-07 16:03
Reporterwinfried_156604 Assigned Todpasukhi  
PrioritynormalSeverityintegration request 
Status assignedResolutionopen 
PlatformMacOSOS 
Product Version7.7.1 
Target VersionUnscheduled 
Summary0033410: Data Exchange, Step Import - TRIANGULATED_FACE from STEP where there are no pnval entries
DescriptionWhen testing, we encountered an issue importing some TRIANGULATED_FACE entries from a step file.

Currently, OCCT is unable to import entries where no pnindex identifiers are specified. In this case, it seems like the correct behaviour is to fallback to indexes in the underlying coordinate set.

The entries that fail to import look as below;

# 466=COORDINATES_LIST('',4,((-157.814575,-532.5,616.),(-157.814575,-167.5,616.),(-25.814579,-532.5,616.),(-25.814579,-167.5,616.)));
# 467=TRIANGULATED_FACE('',# 466,4,((0.,0.,1.)),$,(),((1,3,4),(4,2,1)));
# 468=TESSELLATED_SHELL('',(# 467),$);

Here is the relevant entry from the standard
https://www.steptools.com/stds/smrl/data/modules/tessellated_geometry/sys/4_info_reqs.htm#tessellated_geometry_arm.triangulated_face

Attached is a patch that fixed the behaviour in internal testing, and an example step file that fails to import with OCCT 7.7.1
Steps To ReproduceImport example.step before and after applying the provided patch
TagsNo tags attached.
Test case number

Attached Files

  • occt_import_no_pnvals.patch (1,924 bytes)
  • example.step (9,056 bytes)

Relationships

related to 0030024 verifiedsnn Community Data Exchange - STEP export support of BRep shapes based on tessellated geometry 
has duplicate 0033412 closedbugmaster Community Fix issue importing TRIANGULATED_FACE from STEP where there are no pnval entries 
has duplicate 0033411 closedbugmaster Community Fix issue importing TRIANGULATED_FACE from STEP where there are no pnval entries 
has duplicate 0033409 closedbugmaster Community Fix issue importing TRIANGULATED_FACE from STEP where there are no pnval entries 

Activities

winfried_156604

2023-06-21 03:33

reporter  

occt_import_no_pnvals.patch (1,924 bytes)
example.step (9,056 bytes)

dpasukhi

2023-06-21 11:12

developer   ~0113667

Last edited: 2023-06-21 11:13

Dear @winfried_156604
Thank you for your investigation.

To mark you as an author you need to sign the agreement.
https://dev.opencascade.org/get_involved
As soon as you send us the signed document we give you write permit. And after that you will be an author of your commit. And be able to push.

Best regards, Dmitrii

Issue History

Date Modified Username Field Change
2023-06-21 03:33 winfried_156604 New Issue
2023-06-21 03:33 winfried_156604 Assigned To => winfried_156604
2023-06-21 03:33 winfried_156604 File Added: occt_import_no_pnvals.patch
2023-06-21 03:33 winfried_156604 File Added: example.step
2023-06-21 11:09 dpasukhi Assigned To winfried_156604 => dpasukhi
2023-06-21 11:10 dpasukhi Status new => assigned
2023-06-21 11:10 dpasukhi Target Version => 7.7.2
2023-06-21 11:10 dpasukhi Severity minor => integration request
2023-06-21 11:12 dpasukhi Note Added: 0113667
2023-06-21 11:13 dpasukhi Note Edited: 0113667
2023-06-21 14:28 dpasukhi Relationship added duplicate of 0033412
2023-06-21 14:28 dpasukhi Relationship added duplicate of 0033411
2023-06-21 14:28 dpasukhi Relationship added duplicate of 0033409
2023-06-21 14:32 dpasukhi Relationship added related to 0030024
2023-06-21 15:04 dpasukhi Summary Fix issue importing TRIANGULATED_FACE from STEP where there are no pnval entries => Data Exchange, Step Import - TRIANGULATED_FACE from STEP where there are no pnval entries
2023-06-21 15:04 dpasukhi Description Updated
2023-08-01 14:55 dpasukhi Target Version 7.7.2 => Unscheduled
2023-08-07 16:02 vglukhik Relationship replaced has duplicate 0033412
2023-08-07 16:03 vglukhik Relationship replaced has duplicate 0033411
2023-08-07 16:03 vglukhik Relationship replaced has duplicate 0033409