0033410: Data Exchange, Step Import - TRIANGULATED_FACE from STEP where there are no pnval entries

Problem fixed by using array of nodes in case when aPnindices is empty.